Use ISourceFormatter::highlightModeForMime to find language names instead of ILanguage::name.

This is consistent with Kate.
BUG: 269582